---------------------------------------------------------------------------------------------------
Version: 0.3.2
Date: 2025-02-26
  Features:
    - Added power supply and amplifier
  Changes:
    - Car is now unlocked earlier
    - Tech tree updates for reaching chemical science pack 2, material science pack 2 and geological science pack 2
---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 2025-02-23
  Changes:
    - Tech tree updates for reaching logistic science pack 2
    - Moved fluid recipes to fluid recipes group
    - Updated some crafting categories
    - Increased crafting speed of some buildings
  Bugfixes:
    - Fixed some missing locale
    - Fixed storage volume of tanks
    - Radar is now unlocked after automation core
    - Burner inserter can now be unlocked in tech tree
    - Updated sodium hydroxide recipe
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 2025-02-20
  Features:
    - Compatible with Factorio Space age
---------------------------------------------------------------------------------------------------
Version: 0.2.5
Date: 2024-10-20
  Features:
    - Added new infinite technologies
  Bugfixes:
    - Fixed scaling of technology costs
---------------------------------------------------------------------------------------------------
Version: 0.2.4
Date: 2024-10-18
  Bugfixes:
    - Updated some icons with isometric perspective
---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 2024-10-16
  Features:
    - New recipes enriching crushed ores
  Bugfixes:
    - Changed order and subgroups of some items
    - Reduced size of mod by removing some hr graphics
    - Fixed module icons on alt view for krastorio crusher and lumber mill
    - Fixed subgroup of alien fluid recipes
    - Fixed fluid inputs for filtration plant