@@ -187,6 +187,7 @@ sp-aluminum-ore=Aluminum ore
 sp-aluminum-sheet=Aluminum sheet
 sp-ammonium-metavanadate=Ammonium metavanadate
 sp-ammonium-paratungstate=Ammonium paratungstate
+sp-amplifier=Amplifier
 sp-anodized-aluminum=Anodized aluminum
 sp-antenna-chip=Antenna chip
 sp-antimatter-engine=Antimatter engine
@@ -578,6 +579,7 @@ sp-potassium-cyanide=Potassium cyanide
 sp-potassium-hydroxide=Potassium hydroxide
 sp-potassium-ingot=Potassium ingot
 sp-potassium-ore=Potassium ore
+sp-power-supply=Power supply
 sp-precipitator=Precipitator
 sp-pressure-tube=Pressure tube
 sp-pressure-valve=Pressure valve
@@ -768,6 +770,7 @@ sp-ammonium-hydroxide-solution=Ammonium hydroxide solution
 sp-ammonium-metavanadate=Ammonium metavanadate
 sp-ammonium-paratungstate=Ammonium paratungstate
 sp-ammonium-paratungstate-from-enriched-tungsten=Ammonium paratungstate from enriched tungsten
+sp-amplifier=Amplifier
 sp-anodized-aluminum=Anodized aluminum
 sp-antenna-chip=Antenna chip
 sp-antimatter=Antimatter
@@ -776,6 +779,7 @@ sp-antimony-oxide=Antimony oxide
 sp-antimony-pillet=Antimony pillet
 sp-antimony-trichloride=Antimony trichloride
 sp-antimony-triiodide=Antimony triiodide
+sp-aqueous-niobium=Aqueous niobium
 sp-aqueous-niobium-and-tantalum=Aqueous niobium and tantalum
 sp-arc-furnace=Arc furnace
 sp-arsen-pillet=Arsen pillet
@@ -796,6 +800,7 @@ sp-benzene=Benzene
 sp-big-electric-engine-unit=Big electric engine unit
 sp-bio-capacitor=Bio capacitor
 sp-biochip=Biochip
+sp-biological-science-pack=Biological science pack
 sp-biomethanol=Biomethanol
 sp-bioreactor=Bioreactor
 sp-biusart-lab=Biusart lab
@@ -906,6 +911,7 @@ sp-crushing-titanium-ore=Crushing titanium ore
 sp-crushing-tungsten-ore=Crushing tungsten ore
 sp-crushing-zinc-ore=Crushing zinc ore
 sp-crushing-zirconium-ore=Crushing zirconium ore
+sp-cryogenic-science-pack=Cryogenic science pack
 sp-cryostat=Cryostat
 sp-cubit=Cubit
 sp-cybernetics=Cybernetics
@@ -1251,6 +1257,7 @@ sp-potassium-hydroxide=Potassium hydroxide
 sp-potassium-hydroxide-solution=Potassium hydroxide solution
 sp-potassium-ingot=Potassium ingot
 sp-potassium-permanganate-solution=Potassium permanganate solution
+sp-power-supply=Power supply
 sp-precipitator=Precipitator
 sp-pressure-tube=Pressure tube
 sp-pressure-valve=Pressure valve
@@ -1485,7 +1492,9 @@ sp-basic-acrosphere-conversion=Basic acrosphere conversion
 sp-basic-alloy=Basic alloy
 sp-basic-ceramics=Basic ceramics
 sp-basic-crushing-smelting=Basic crushing smelting
+sp-big-crusher=Big crusher
 sp-big-electric-engine-unit=Big electric engine unit
+sp-biological-science-pack=Biological science pack
 sp-bleach=Bleach
 sp-blunagium-explorer=Blunagium explorer
 sp-blunagium-processing=Blunagium processing
@@ -1509,6 +1518,7 @@ sp-cooling=Cooling
 sp-copper-extruding=Copper extruding
 sp-core-extractor=Core extractor
 sp-crusher=Crusher
+sp-cryogenic-science-pack=Cryogenic science pack
 sp-crystal-growing=Crystal growing
 sp-cybernetics=Cybernetics
 sp-cyclotron=Cyclotron
@@ -1559,16 +1569,21 @@ sp-iron-machining=Iron machining
 sp-kevlar=Kevlar
 sp-kr-advanced-furnace=Advanced furnace
 sp-kr-advanced-solar-panel=Advanced solar panel
+sp-kr-antimatter-reactor=Antimatter reactor
 sp-kr-atmosphere-condensation=Atmosphere condensation
+sp-kr-automation=Automation
 sp-kr-automation-core=Automation core
 sp-kr-fluid-excess-handling=Fluid excess handling
 sp-kr-fluids-chemistry=Fluids chemistry
 sp-kr-fuel=Fuel
 sp-kr-gas-power-station=Gas power station
 sp-kr-greenhouse=Greenhouse
+sp-kr-matter-processing=Matter processing
 sp-kr-particle-accelerator=Particle accelerator
 sp-kr-portable-generator=Portable generator
+sp-kr-quarry-minerals-extraction=Quarry minerals extraction
 sp-kr-research-server=Research server
+sp-kr-superior-inserters=Superior inserters
 sp-kr-wind-turbine=Wind turbine
 sp-logistic-science-pack=Logistic science pack
 sp-lumber-mill=Lumber mill
@@ -1603,6 +1618,7 @@ sp-phosphorus-processing=Phosphorus processing
 sp-plutonium-fuel-rod=Plutonium fuel rod
 sp-plutonium-processing=Plutonium processing
 sp-potassium-processing=Potassium processing
+sp-power-regulation=Power regulation
 sp-pressure-fluid=Pressure fluid
 sp-processed-resource-from-acrovoid=Processed resource from acrovoid
 sp-production-science-pack=Production science pack
